# muon-stability-paper

./: .gitignore  helpers.py  main.py  pyproject.toml  train_grokking.ipynb  train_grokking_muon.ipynb
base_nanda_paper/: helpers.py  transformers.py
