[project]
name = "muon-stability-paper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.2",
    "ipython>=9.13.0",
    "kaleido>=1.3.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "pandas>=3.0.3",
    "pip>=26.1.1",
    "plotly>=6.7.0",
    "torch>=2.12.0",
    "wandb>=0.27.0",
]
